--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card" style="border: 2px solid black; width: 410px; height: 550px; margin: auto;">
         <div class="card-body" style="background-color: #faf0e6;">
             <div class="text-center">
-                <img src="/Crit B/icon.png" style="margin-top: 75px;">
+                <img src="icon.png" style="margin-top: 75px;">
                 <form style="margin-top: 25px;" id="search">
                     <div class="form-group" style="width: 90%;margin: auto;">
                         <div class="input-group input-group-lg">
