--- a/output.html
+++ b/output.html
@@ -16,8 +16,7 @@
     margin-bottom: 8px;
 }
 .positioning {
-    margin-left: 8px;
-    margin-right: 8px;
+    padding: 8px;
 }
 </style>
 
@@ -42,10 +41,9 @@
               </ul>
               <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="define" role="tabpanel" aria-labelledby="define-tab" style="background-color: white;">         
-                    <br>
                     <div class="positioning">
                         <div class="text-center">
-                            <button type="button" class="btn btn-outline-secondary btn-sm" style="margin-bottom: 8px; margin-top: -5px;" onclick="gotosearch()">Search For Another Word</button>
+                            <button type="button" class="btn btn-outline-secondary btn-sm" style="margin-bottom: 8px;" onclick="gotosearch()">Search For Another Word</button>
                             <h1>Word</h1>
                             <h6>/ 'pro-noun-si-as-shion/</h6>
                             <hr>
@@ -72,10 +70,9 @@
                     </div>
                 </div>
                 <div class="tab-pane fade" id="synonym" role="tabpanel" aria-labelledby="synonym-tab" style="background-color: white;">
-                    <br>
                     <div class="positioning">
                         <div class="text-center">
-                            <button type="button" class="btn btn-outline-secondary btn-sm" style="margin-bottom: 8px; margin-top: -5px;" onclick="gotosearch()">Search For Another Word</button>
+                            <button type="button" class="btn btn-outline-secondary btn-sm" style="margin-bottom: 8px;" onclick="gotosearch()">Search For Another Word</button>
                             <h1>Word</h1>
                             <hr>
                         </div>
@@ -122,10 +119,9 @@
                     </div>
                 </div>
                 <div class="tab-pane fade" id="rhyme" role="tabpanel" aria-labelledby="rhyme-tab" style="background-color: white;">         
-                    <br>
                     <div class="positioning">
                         <div class="text-center">
-                            <button type="button" class="btn btn-outline-secondary btn-sm" style="margin-bottom: 8px; margin-top: -5px;" onclick="gotosearch()">Search For Another Word</button>
+                            <button type="button" class="btn btn-outline-secondary btn-sm" style="margin-bottom: 8px;" onclick="gotosearch()">Search For Another Word</button>
                             <h1>Word</h1>
                             <hr>
                         </div>
@@ -180,10 +176,9 @@
                     </div>
                 </div>
                 <div class="tab-pane fade" id="misc" role="tabpanel" aria-labelledby="misc-tab" style="background-color: white;">
-                    <br>
                     <div class="positioning">
                         <div class="text-center">
-                            <button type="button" class="btn btn-outline-secondary btn-sm" style="margin-bottom: 8px; margin-top: -5px;" onclick="gotosearch()">Search For Another Word</button>
+                            <button type="button" class="btn btn-outline-secondary btn-sm" style="margin-bottom: 8px;" onclick="gotosearch()">Search For Another Word</button>
                             <h1>Word</h1>
                             <hr>
                         </div>
